# amqpcpp

./: CMakeLists.txt
cmake/: FindLibRabbitMQ.cmake
examples/: example_consume.cpp  example_get.cpp  example_publish.cpp
include/: AMQPcpp.h
src/: AMQP.cpp  AMQPBase.cpp  AMQPException.cpp  AMQPExchange.cpp  AMQPMessage.cpp  AMQPQueue.cpp
